--- a/configs/fake_thumos_i3d.yaml
+++ b/configs/fake_thumos_i3d.yaml
@@ -1,10 +1,9 @@
-#"init_rand_seed": 0
 dataset_name: thumos
 train_split: ['validation']
 val_split: ['test']
-"devices": ['cuda:5']
+"devices": ['cuda:3']
 dataset: {
-  json_file: ./data/thumos/annotations/thumos14.json, #./data/thumos/annotations/fake_thumos14.json, #./data/thumos/annotations/thumos14.json,
+  json_file: ./data/thumos/annotations/fake_thumos14.json,
   feat_folder: ./data/thumos/i3d_features,
   file_prefix: ~,
   file_ext: .npy,
@@ -35,7 +34,7 @@ train_cfg: {
   init_loss_norm: 100,
   clip_grad_l2norm: 1.0,
   cls_prior_prob: 0.01,
-  center_sample: radius,
+  center_sample: radius, # point, #radius,\
   center_sample_radius: 1.5,
 }
 test_cfg: {
